examples/tests/typed_const_bind_errors.ore
/*
    Stage E.3.5f — `::` const bindings rejected when RHS isn't
    comptime-evaluable. Each top-level decl below should produce
    exactly one "must be comptime-evaluable" diagnostic (plus a hint).
*/

regular_fn :: fn() -> i32
    99

// error: call result is runtime
bad_call :: regular_fn()

// error: address-of a param is runtime
bad_addr :: fn(x: i32) -> ^i32
    p :: &x
    p

// error: reading a param is runtime
bad_param :: fn(x: i32) -> i32
    y :: x
    y

// error: reading a `:=` var is runtime
bad_var :: fn() -> i32
    counter := 0
    n :: counter
    n

// error: pointer deref is runtime
bad_deref :: fn(p: ^i32) -> i32
    v :: p^
    v
